# non-parametric-prior

./: .gitignore  README.md  TODO.md  main.py  pyproject.toml  requirements.txt  ~$vision.docx
case-studies/: case-study-1.py  case-study-2.py
non_parametric_prior.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: flag_outliers.py  preprocessing_case-study-1.py  preprocessing_case-study-2.py
src/convergence_diagnostics/: run.py
src/non_parametric_prior.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sensitivity_analysis/: binomial_run.py  binomial_utils.py  normal_run.py  normal_utils.py
supplementary-material/: binomial.md  figure_template.pptm  normal-correlated.md  normal-independent.md  normal-skewed.md
